[package]
name = "bluerobotics-ping"
version = "0.2.2"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>, Raul Victor Trombin <raulvtrombin@gmail.com>"]
edition = "2021"
build = "build/main.rs"
license = "MIT"
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Ping devices family"
homepage = "https://bluerobotics.com/store/sonars/echosounders/ping-sonar-r2-rp/"
documentation = "https://docs.bluerobotics.com/ping-rs/bluerobotics_ping/"
repository = "https://github.com/bluerobotics/ping-rs"
categories = ["science::robotics", "embedded", "hardware-support"]
keywords = ["BlueRobotics", "embedded", "sonar", "robotics", "ROV"]
readme = "README.md"

[dependencies]
bytes = "1.3.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
tokio-serial = "5.4.4"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tracing-test = "0.2.4"
udp-stream = "0.0.12"

[build-dependencies]
convert_case = "0.6.0"
quote = "1.0"
proc-macro2 = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[features]
local_runner = []
default = ["serde"]
