[package]
name = "bluerobotics-ping"
version = "0.3.4"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>, Raul Victor Trombin <raulvtrombin@gmail.com>"]
edition = "2021"
build = "build/main.rs"
license = "MIT"
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Ping devices family"
homepage = "https://bluerobotics.com/store/sonars/echosounders/ping-sonar-r2-rp/"
documentation = "https://docs.bluerobotics.com/ping-rs/bluerobotics_ping/"
repository = "https://github.com/bluerobotics/ping-rs"
categories = ["science::robotics", "embedded", "hardware-support"]
keywords = ["BlueRobotics", "embedded", "sonar", "robotics", "ROV"]
readme = "README.md"

[dependencies]
bytes = "1.3.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
tokio-serial = "5.4.4"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = "0.11"
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tracing-test = "0.2.4"
tracing-subscriber = "0.3.19"
udp-stream = "0.0.12"
arbitrary = { version = "1.4.1", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
rand = "0.9.1"

[build-dependencies]
convert_case = "0.6.0"
quote = "1.0"
proc-macro2 = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
arbitrary = { version = "1.4.1", features = ["derive"] }

[features]
local_runner = []
arbitrary = ["dep:arbitrary"]
default = ["serde"]
