[package]
name = "bluerobotics-ping"
version = "0.3.6"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>, Raul Victor Trombin <raulvtrombin@gmail.com>"]
edition = "2021"
build = "build/main.rs"
license = "MIT"
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Ping devices family"
homepage = "https://bluerobotics.com/store/sonars/echosounders/ping-sonar-r2-rp/"
documentation = "https://docs.bluerobotics.com/ping-rs/bluerobotics_ping/"
repository = "https://github.com/bluerobotics/ping-rs"
categories = ["science::robotics", "embedded", "hardware-support"]
keywords = ["BlueRobotics", "embedded", "sonar", "robotics", "ROV"]
readme = "README.md"

[dependencies]
bytes = "1.11.0"
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
futures = "0.3.31"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_bytes = "0.11.19"
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
schemars = { version = "1.1.0", optional = true }

[dev-dependencies]
tracing-test = "0.2.5"
tracing-subscriber = "0.3.20"
udp-stream = "0.0.12"
arbitrary = { version = "1.4.1", features = ["derive"] }
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
rand = "0.9.2"
serde_json = { version =  "1.0.145" }
jsonschema = "0.37.1"

[build-dependencies]
convert_case = "0.10.0"
quote = "1.0.42"
proc-macro2 = "1.0.103"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
arbitrary = { version = "1.4.1", features = ["derive"] }

[features]
local_runner = []
arbitrary = ["dep:arbitrary"]
default = ["serde"]
json_schema = ["schemars"]

[[bench]]
name = "bench_codec"
harness = false

[[bench]]
name = "bench_parser"
harness = false
